add_library(
  keywords
  atomtypevector.cpp
  base.cpp
  bool.cpp
  configuration.cpp
  configurationvector.cpp
  data1dstore.cpp
  data2dstore.cpp
  data3dstore.cpp
  double.cpp
  dynamicsitenodes.cpp
  elementvector.cpp
  expression.cpp
  expressionvariablevector.cpp
  fileandformat.cpp
  function1d.cpp
  geometrylist.cpp
  integer.cpp
  isotopologueset.cpp
  modulevector.cpp
  nodebranch.cpp
  nodeunderlay.cpp
  nodevalue.cpp
  optionaldouble.cpp
  optionalint.cpp
  procedure.cpp
  range.cpp
  species.cpp
  speciessite.cpp
  speciessitevector.cpp
  speciesvector.cpp
  stdstring.cpp
  store.cpp
  valuestore.cpp
  vec3double.cpp
  vec3integer.cpp
  vec3nodevalue.cpp
  vector_intdouble.cpp
  vector_intstring.cpp
  vector_stringdouble.cpp
  vector_stringpair.cpp
  atomtypevector.h
  base.h
  bool.h
  configuration.h
  configurationvector.h
  data1dstore.h
  data2dstore.h
  data3dstore.h
  double.h
  dynamicsitenodes.h
  elementvector.h
  enumoptions.h
  expression.h
  expressionvariablevector.h
  fileandformat.h
  function1d.h
  geometrylist.h
  integer.h
  isotopologueset.h
  module.h
  modulevector.h
  node.h
  nodeandinteger.h
  nodebranch.h
  nodeunderlay.h
  nodevalue.h
  nodevalueenumoptions.h
  nodevector.h
  optionaldouble.h
  optionalint.h
  procedure.h
  range.h
  species.h
  speciessite.h
  speciessitevector.h
  speciesvector.h
  stdstring.h
  store.h
  valuestore.h
  vec3double.h
  vec3integer.h
  vec3labels.h
  vec3nodevalue.h
  vector_intdouble.h
  vector_intstring.h
  vector_stringdouble.h
  vector_stringpair.h
)

target_include_directories(keywords PRIVATE ${PROJECT_SOURCE_DIR}/src)
target_link_libraries(keywords PRIVATE base)
