add_library(
  keywords
  atomTypeVector.cpp
  base.cpp
  bool.cpp
  configuration.cpp
  configurationVector.cpp
  data1DStore.cpp
  data2DStore.cpp
  data3DStore.cpp
  double.cpp
  elementVector.cpp
  expression.cpp
  expressionVariableVector.cpp
  fileAndFormat.cpp
  function1D.cpp
  geometryList.cpp
  integer.cpp
  isotopologueSet.cpp
  layer.cpp
  moduleVector.cpp
  nodeBranch.cpp
  nodeUnderlay.cpp
  nodeValue.cpp
  optionalDouble.cpp
  optionalInt.cpp
  procedure.cpp
  range.cpp
  rangeVector.cpp
  species.cpp
  speciesSite.cpp
  speciesSiteVector.cpp
  speciesVector.cpp
  stdString.cpp
  store.cpp
  storeData.cpp
  valueStore.cpp
  vec3Double.cpp
  vec3Integer.cpp
  vec3NodeValue.cpp
  vectorIntDouble.cpp
  vectorIntString.cpp
  vectorStringDouble.cpp
  vectorStringPair.cpp
  weightedModuleVector.cpp
  atomTypeVector.h
  base.h
  bool.h
  configuration.h
  configurationVector.h
  data1DStore.h
  data2DStore.h
  data3DStore.h
  double.h
  elementVector.h
  enumOptions.h
  expression.h
  expressionVariableVector.h
  fileAndFormat.h
  function1D.h
  geometryList.h
  integer.h
  interactionPotential.h
  isotopologueSet.h
  layer.h
  module.h
  moduleVector.h
  node.h
  nodeAndInteger.h
  nodeBranch.h
  nodeUnderlay.h
  nodeValue.h
  nodeValueEnumOptions.h
  nodeVector.h
  optionalDouble.h
  optionalInt.h
  procedure.h
  range.h
  species.h
  speciesSite.h
  speciesSiteVector.h
  speciesVector.h
  stdString.h
  store.h
  storeData.h
  rangeVector.h
  valueStore.h
  vec3Double.h
  vec3Integer.h
  vec3Labels.h
  vec3NodeValue.h
  vectorIntDouble.h
  vectorIntString.h
  vectorStringDouble.h
  vectorStringPair.h
  weightedModuleVector.h
)

target_include_directories(keywords PRIVATE ${PROJECT_SOURCE_DIR}/src)
target_link_libraries(keywords PRIVATE base)
