add_library(
  keywords
  atomTypeVector.cpp
  base.cpp
  bool.cpp
  configuration.cpp
  configurationVector.cpp
  double.cpp
  elementVector.cpp
  expression.cpp
  expressionVariableVector.cpp
  fileAndFormat.cpp
  function1D.cpp
  integer.cpp
  isotopologueSet.cpp
  layer.cpp
  moduleVector.cpp
  nodeBranch.cpp
  nodeUnderlay.cpp
  nodeValue.cpp
  optionalDouble.cpp
  optionalInt.cpp
  procedure.cpp
  range.cpp
  rangeVector.cpp
  species.cpp
  speciesSite.cpp
  speciesSiteVector.cpp
  speciesVector.cpp
  stdString.cpp
  store.cpp
  storeData.cpp
  vec3Double.cpp
  vec3Integer.cpp
  vec3NodeValue.cpp
  weightedModuleVector.cpp
  atomTypeVector.h
  base.h
  bool.h
  configuration.h
  configurationVector.h
  double.h
  elementVector.h
  enumOptions.h
  expression.h
  expressionVariableVector.h
  fileAndFormat.h
  function1D.h
  integer.h
  interactionPotential.h
  isotopologueSet.h
  layer.h
  module.h
  moduleVector.h
  node.h
  nodeAndInteger.h
  nodeBranch.h
  nodeUnderlay.h
  nodeValue.h
  nodeValueEnumOptions.h
  nodeVector.h
  optionalDouble.h
  optionalInt.h
  procedure.h
  range.h
  species.h
  speciesSite.h
  speciesSiteVector.h
  speciesVector.h
  stdString.h
  store.h
  storeData.h
  rangeVector.h
  vec3Double.h
  vec3Integer.h
  vec3Labels.h
  vec3NodeValue.h
  weightedModuleVector.h
)

target_include_directories(keywords PRIVATE ${PROJECT_SOURCE_DIR}/src)
target_link_libraries(keywords PRIVATE base)
