noinst_LTLIBRARIES = libkeywords.la

libkeywords_la_SOURCES = atomtypeselection.cpp
libkeywords_la_SOURCES += base.cpp bool.cpp broadeningfunction.cpp
libkeywords_la_SOURCES += charstring.cpp complex.cpp
libkeywords_la_SOURCES += data1dstore.cpp data2dstore.cpp data3dstore.cpp double.cpp
libkeywords_la_SOURCES += fileandformat.cpp
libkeywords_la_SOURCES += group.cpp
libkeywords_la_SOURCES += integer.cpp isotopologuereferencelist.cpp
libkeywords_la_SOURCES += list.cpp
libkeywords_la_SOURCES += modulegroups.cpp modulereferencelist.cpp
libkeywords_la_SOURCES += pairbroadeningfunction.cpp procedure.cpp
libkeywords_la_SOURCES += speciesreferencelist.cpp speciessite.cpp speciessitereferencelist.cpp
libkeywords_la_SOURCES += vec3double.cpp vec3integer.cpp
libkeywords_la_SOURCES += windowfunction.cpp

noinst_HEADERS = atomtypeselection.h
noinst_HEADERS += base.h bool.h broadeningfunction.h
noinst_HEADERS += charstring.h complex.h
noinst_HEADERS += data.h data1dstore.h data2dstore.h data3dstore.h double.h
noinst_HEADERS += enumoptions.h
noinst_HEADERS += fileandformat.h
noinst_HEADERS += group.h
noinst_HEADERS += integer.h isotopologuereferencelist.h
noinst_HEADERS += list.h
noinst_HEADERS += modulegroups.h modulereferencelist.h
noinst_HEADERS += pairbroadeningfunction.h procedure.h
noinst_HEADERS += speciesreferencelist.h speciessite.h speciessitereferencelist.h
noinst_HEADERS += types.h
noinst_HEADERS += vec3double.h vec3integer.h
noinst_HEADERS += windowfunction.h

AM_CPPFLAGS = -I../ -I../../ @DISSOLVE_CFLAGS@

