noinst_LTLIBRARIES = libkeywords.la

libkeywords_la_SOURCES = atomtypeselection.cpp
libkeywords_la_SOURCES += base.cpp bool.cpp broadeningfunction.cpp
libkeywords_la_SOURCES += charstring.cpp complex.cpp
libkeywords_la_SOURCES += data1dstore.cpp data2dstore.cpp data3dstore.cpp double.cpp
libkeywords_la_SOURCES += expressionvariablelist.cpp
libkeywords_la_SOURCES += fileandformat.cpp
libkeywords_la_SOURCES += group.cpp
libkeywords_la_SOURCES += integer.cpp isotopologuereferencelist.cpp
libkeywords_la_SOURCES += list.cpp
libkeywords_la_SOURCES += modulegroups.cpp modulereflist.cpp
libkeywords_la_SOURCES += node.cpp nodeandinteger.cpp nodebranch.cpp nodevalue.cpp nodevalueenumoptions.cpp
libkeywords_la_SOURCES += pairbroadeningfunction.cpp procedure.cpp
libkeywords_la_SOURCES += species.cpp speciesreflist.cpp speciessite.cpp speciessitereflist.cpp
libkeywords_la_SOURCES += vec3double.cpp vec3integer.cpp vec3nodevalue.cpp
libkeywords_la_SOURCES += windowfunction.cpp

noinst_HEADERS = atomtypeselection.h
noinst_HEADERS += base.h bool.h broadeningfunction.h
noinst_HEADERS += charstring.h complex.h
noinst_HEADERS += data.h data1dstore.h data2dstore.h data3dstore.h double.h
noinst_HEADERS += enumoptions.h expressionvariablelist.h
noinst_HEADERS += fileandformat.h
noinst_HEADERS += group.h
noinst_HEADERS += integer.h isotopologuereferencelist.h
noinst_HEADERS += list.h
noinst_HEADERS += modulegroups.h modulereflist.h
noinst_HEADERS += node.h nodeandinteger.h nodebranch.h nodevalue.h nodevalueenumoptions.h
noinst_HEADERS += pairbroadeningfunction.h procedure.h
noinst_HEADERS += species.h speciesreflist.h speciessite.h speciessitereflist.h
noinst_HEADERS += types.h
noinst_HEADERS += vec3double.h vec3integer.h vec3labels.h vec3nodevalue.h
noinst_HEADERS += windowfunction.h

AM_CPPFLAGS = -I../ -I../../ @DISSOLVE_CFLAGS@

